--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
           </ion-row>
           <ion-row class="mg-top-neg">
             <ion-col size="9">
-              <ion-label><h3>#AWB28OPX389</h3></ion-label>
+              <ion-label><h3>#{{ orderId }}</h3></ion-label>
             </ion-col>
             <ion-col text-right size="3">
               <ion-text color="primary">
@@ -44,27 +44,32 @@
               <ion-label><p>Delivery Address</p></ion-label>
             </ion-col>
           </ion-row>
-          <ion-row class="mg-top-neg">
+          <ion-row class="mg-top-neg" *ngIf="(order | json) != '{}'">
             <ion-col size="8">
               <ion-label>
-                <h3>Anand Thiyagarasu</h3>
+                <h3>{{ order.first_name +' '+ (order.last_name ? order.last_name : '') }}</h3>
               </ion-label>
               <ion-label>
-                <h3>12th Street, Ram Nagar</h3>
+                <h3>{{ order.flat_plot_no + ', ' + order.building_name }}</h3>
               </ion-label>
               <ion-label>
-                <h3>Madipakkam, Chennai</h3>
+                <h3>{{ order.location }}</h3>
+              </ion-label>
+              <ion-label *ngIf="order && order.landmark!=''">
+                <h3>Landmark: {{ order.landmark }}</h3>
               </ion-label>
             </ion-col>
             <ion-col text-right size="4">
               <ion-grid>
                 <ion-row>
                   <ion-col size="6">
-                    <ion-icon
-                      class="circle border-primary padding"
-                      color="primary"
-                      name="call"
-                    ></ion-icon>
+                    <a href="tel:9944221974">
+                      <ion-icon
+                        class="circle border-primary padding"
+                        color="primary"
+                        name="call"
+                      ></ion-icon>
+                    </a>
                   </ion-col>
                   <ion-col size="6">
                     <ion-icon
@@ -87,13 +92,13 @@
           </ion-row>
 
 
-          <ion-row class="border-bottom-light-shade row-space">
+          <ion-row *ngFor="let product of productsList" class="border-bottom-light-shade row-space">
             <ion-col size="2">
-                <img src="https://www.bigbasket.com/media/uploads/p/l/40112945_1-organic-tattva-organic-mustard-oil.jpg">
+                <img [attr.src]="product.product_image">
             </ion-col>
             <ion-col>
               <ion-label>
-                <h3>Organic Tattva Organic - Mustard Oil, 1 L Pet bottel</h3>
+                <h3>{{ product.product_title }}</h3>
                 <ion-text color="success">
                   <h6>Available</h6>
                 </ion-text>
@@ -101,7 +106,7 @@
                 <ion-button color="light" expand="full">
                   <ion-label>
                       <h5>
-                        Quantity:  2
+                        Quantity:  {{ product.product_quantity }}
                         <ion-icon slot="end" src="../../assets/icons/_ionicons_svg_md-arrow-dropdown.svg"></ion-icon>
                       </h5>
                   </ion-label>
@@ -109,11 +114,12 @@
               </ion-label>
             </ion-col>
             <ion-col size="3">
-              <ion-label><h3>$1000.00</h3></ion-label>
+              <ion-label><h3>₹{{product.product_rate}}</h3></ion-label>
             </ion-col>
           </ion-row>
 
-          <ion-row class="border-bottom-light-shade row-space">
+          <!--  OUT OF STOCK SAMPLE TEMPLATE ---->
+           <!-- <ion-row class="border-bottom-light-shade row-space">
             <ion-col size="2">
                 <img src="https://www.bigbasket.com/media/uploads/p/l/40109378_5-bb-royal-organic-moong-dal-unpolished.jpg">
             </ion-col>
@@ -137,32 +143,30 @@
             <ion-col size="3">
               <ion-label><h3><s>$1000.00</s></h3></ion-label>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
 
           <ion-row>
               <ion-col>
                 <ion-label><h3>Sub total</h3></ion-label>
               </ion-col>
               <ion-col size="3">
-                  <ion-label><h3>$3899.00</h3></ion-label>
+                  <ion-label><h3>₹{{orderInfo.total_amount}}</h3></ion-label>
               </ion-col>
-            </ion-row>
-
+          </ion-row>
           <ion-row class="border-bottom-light-shade">
               <ion-col>
                 <ion-label><h3>Delivery charges</h3></ion-label>
               </ion-col>
               <ion-col size="3">
-                <ion-label><h3>$49.00</h3></ion-label>
+                <ion-label><h3>₹{{orderInfo.discount_amount}}</h3></ion-label>
               </ion-col>
             </ion-row>
-
           <ion-row class="row-space">
             <ion-col>
               <ion-label><h3>Total</h3></ion-label>
             </ion-col>
             <ion-col size="3">
-                <ion-label><h3>$3948.00</h3></ion-label>
+                <ion-label><h3>₹{{orderInfo.total_amount}}</h3></ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
