--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -155,7 +155,7 @@
           </ion-row>
           <ion-row class="border-bottom-light-shade">
               <ion-col>
-                <ion-label><h3>Delivery charges</h3></ion-label>
+                <ion-label><h3>Discount amount</h3></ion-label>
               </ion-col>
               <ion-col size="3">
                 <ion-label><h3>₹{{orderInfo.discount_amount}}</h3></ion-label>
