--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -37,7 +37,7 @@
             </ion-col>
           </ion-row>
         </ion-grid>
-<!-- 
+ 
         <ion-grid class="border-light-shade ion-margin bg-contrast">
           <ion-row>
             <ion-col>
@@ -82,7 +82,7 @@
               </ion-grid>
             </ion-col>
           </ion-row>
-        </ion-grid> -->
+        </ion-grid>
 
         <ion-grid class="border-light-shade ion-margin bg-contrast">
           <ion-row>
