--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,3 +72,14 @@ ion-button{
   .font-13 {
     font-size: 13px;
   }
+
+  .icon-trash {
+    font-size: 23px;
+    color: #666;
+    position: absolute;
+    bottom: 15px;
+  }
+
+  .available {
+    color : #057933;
+  }
