--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -99,13 +99,12 @@
             <ion-col>
               <ion-label>
                 <h3>{{ product.product_title }}</h3>
-                <ion-text color="success">
+                <ion-text class="available">
                   <h6>Available</h6>
                 </ion-text>
                 <ion-button color="light" expand="full" class="font-13" (click)="onSelectClick(ind)" #quantitySelect>
                         <ion-label>Quantity</ion-label>
                         <ion-select (ionChange)="onChangeQuantity( $event , product )" [interfaceOptions]="customAlertOptions" class="quantity-select" okText="Confirm" cancelText="Cancel">
-                          <ion-select-option value="0">0 (Remove Product)</ion-select-option>
                           <ion-select-option *ngFor="let i of arrayFill(product.product_quantity)" [selected]="i == product.product_quantity">{{i}}</ion-select-option>
                         </ion-select>
                   </ion-button>
@@ -113,6 +112,7 @@
             </ion-col>
             <ion-col size="3">
               <ion-label><h3>₹{{product.product_rate}}</h3></ion-label>
+              <ion-icon name="trash" class="icon-trash" (click)="onRemoveProduct( product )"></ion-icon>
             </ion-col>
           </ion-row>
 
