--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -72,11 +72,13 @@
                     </a>
                   </ion-col>
                   <ion-col size="6">
-                    <ion-icon
-                      class="circle border-primary padding"
-                      color="primary"
-                      name="pin"
-                    ></ion-icon>
+                    <a href="geo:37.786971,-122.399677;u=35">
+                      <ion-icon
+                        class="circle border-primary padding"
+                        color="primary"
+                        name="pin"
+                      ></ion-icon>
+                    </a>
                   </ion-col>
                 </ion-row>
               </ion-grid>
@@ -102,17 +104,31 @@
                 <ion-text class="available">
                   <h6>Available</h6>
                 </ion-text>
-                <ion-button color="light" expand="full" class="font-13" (click)="onSelectClick(ind)" #quantitySelect>
-                        <ion-label>Quantity</ion-label>
-                        <ion-select (ionChange)="onChangeQuantity( $event , product )" [interfaceOptions]="customAlertOptions" class="quantity-select" okText="Confirm" cancelText="Cancel">
+                <ion-button color="light" class="font-13" (click)="onSelectClick(ind)">
+                        <!-- <ion-label>Quantity</ion-label> -->
+                        <ion-select #quantitySelectElem (ionChange)="onChangeQuantity( $event , product )" [interfaceOptions]="customQuantitySelectOptions" class="quantity-select" okText="Confirm" cancelText="Cancel">
                           <ion-select-option *ngFor="let i of arrayFill(product.product_quantity)" [selected]="i == product.product_quantity">{{i}}</ion-select-option>
                         </ion-select>
                   </ion-button>
+
+                  <ion-button class="font-13 remove-btn" fill="clear" (click)="onRemoveSelectClick(ind)">
+                      <ion-icon name="trash" class="icon-trash remove-btn-icon"></ion-icon>
+                      <ion-label class="remove-btn-label">Remove</ion-label>
+                      <ion-select #removeSelectElem (ionChange)="onReasonSelect( $event , product )" [interfaceOptions]="customCancellationReasonSelectOptions" class="quantity-select hide" okText="Remove" cancelText="Cancel">
+                        <ion-select-option *ngFor="let reasonObj of this.cancellationReason" [value]="reasonObj.order_cancel_reason_id">{{reasonObj.order_cancel_reason}}</ion-select-option>
+                      </ion-select>
+                </ion-button>
+                  
+                  <!-- <span (click)="onRemoveProduct( product )">
+                    <ion-icon name="trash" class="icon-trash"></ion-icon>
+                    <ion-label class="icon-trash-label">
+                      Remove
+                    </ion-label>
+                  </span> -->
               </ion-label>
             </ion-col>
             <ion-col size="3">
-              <ion-label><h3>₹{{product.product_rate}}</h3></ion-label>
-              <ion-icon name="trash" class="icon-trash" (click)="onRemoveProduct( product )"></ion-icon>
+              <ion-label><h3>₹{{product.product_rate*product.product_quantity}}</h3></ion-label>
             </ion-col>
           </ion-row>
 
@@ -148,7 +164,7 @@
                 <ion-label><h3>Sub total</h3></ion-label>
               </ion-col>
               <ion-col size="3">
-                  <ion-label><h3>₹{{orderInfo.total_amount}}</h3></ion-label>
+                  <ion-label><h3>₹{{this.getTotalAmount()}}</h3></ion-label>
               </ion-col>
           </ion-row>
           <ion-row class="border-bottom-light-shade">
@@ -164,11 +180,23 @@
               <ion-label><h3>Total</h3></ion-label>
             </ion-col>
             <ion-col size="3">
-                <ion-label><h3>₹{{orderInfo.total_amount}}</h3></ion-label>
+                <ion-label><h3>₹{{this.getTotalAmount()-orderInfo.discount_amount}}</h3></ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
 
+        <ion-grid>
+          <ion-row>
+              <ion-col size-md="6" offset-md="3">
+                  <ion-button expand="block" *ngIf="this.hasChangesInQuantity" (click)="onSaveChangesClick()">
+                    Save Changes
+                  </ion-button>
+                  <ion-button color="secondary" expand="block" *ngIf="!this.hasChangesInQuantity">
+                      Mark As Delivered
+                  </ion-button>
+                </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-col>
     </ion-row>
   </ion-grid>
