--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -147,11 +147,13 @@
                     </a>
                   </ion-col>
                   <ion-col size="5" class="ion-no-padding">
-                    <ion-icon
-                      class="circle border-primary padding"
-                      color="primary"
-                      name="pin"
-                    ></ion-icon>
+                    <a href="geo:37.786971,-122.399677;u=35">
+                      <ion-icon
+                        class="circle border-primary padding"
+                        color="primary"
+                        name="pin"
+                      ></ion-icon>
+                    </a>
                   </ion-col>
                 </ion-row>
               </ion-grid>
