--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -63,7 +63,7 @@
               <ion-grid>
                 <ion-row>
                   <ion-col size="6">
-                    <a href="tel:9944221974">
+                    <a href="tel:{{this.orderInfo.mobile_no}}">
                       <ion-icon
                         class="circle border-primary padding"
                         color="primary"
