--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,12 @@
       <ion-header>
         <ion-toolbar class="ion-padding-bottom ion-padding-top">
           <ion-avatar slot="start"  class="ion-margin-start">
-              <img src="https://lh3.googleusercontent.com/-Z49zuZFbZw0/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rfz7J0balrAXjH-ohx91Sw38Pol0A.CMID/s192-c/photo.jpg">
+              <!-- <img src="https://lh3.googleusercontent.com/-Z49zuZFbZw0/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rfz7J0balrAXjH-ohx91Sw38Pol0A.CMID/s192-c/photo.jpg"> -->
+              <div class="avatar-text">{{this.getAvatarText()}}</div>
             </ion-avatar>
           <ion-label slot="start"  class="ion-margin-start">
-            <h2>Anand Thiyagarasu</h2>
-            <p>Chennai, Tamilnadu</p>
+            <h2>{{this.getCookieInfo('delPerName')}}</h2>
+            <!-- <p>Chennai, Tamilnadu</p> -->
           </ion-label>
         </ion-toolbar>
       </ion-header>
@@ -25,7 +26,7 @@
         </ion-list>
       </ion-content>
       <ion-footer>
-        <ion-toolbar (click)="onLogoutClick()" [routerLink]="['/login']" routerLinkActive="router-link-active" style="outline:none;">
+        <ion-toolbar (click)="onLogoutClick()" style="outline:none;">
           <ion-buttons slot="secondary">
             <ion-button>
               <ion-icon slot="icon-only" name="log-out"></ion-icon>
