--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -168,6 +168,16 @@
                   <ion-label><h3>₹{{this.getSubTotalAmount()}}</h3></ion-label>
               </ion-col>
           </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <ion-label><h3>Delivery Charges</h3></ion-label>
+            </ion-col>
+            <ion-col size="3">
+                <ion-label><h3>₹{{orderInfo.delivery_charges}}</h3></ion-label>
+            </ion-col>
+        </ion-row>
+
           <ion-row class="border-bottom-light-shade">
               <ion-col>
                 <ion-label><h3>Discount amount</h3></ion-label>
